fix: index.html 수정

--- a/04-todolist/index.html
+++ b/04-todolist/index.html
@@ -8,19 +8,21 @@
     <meta name="keywords" content="컴포넌트, 과제, 피그마, 아토믹" />
     <meta
       property="og:title"
-      content="[멋쟁이사자처럼 10기] 과제 - 커스텀 템플릿 by React"
+      content="[멋쟁이사자처럼 10기] 과제 - 오늘 할 일 : 우리, 오늘 뭐할까? by React"
     />
     <meta
       property="og:site_name"
-      content="[멋쟁이사자처럼 10기] 과제 - 커스텀 템플릿 by React"
+      content="[멋쟁이사자처럼 10기] 과제 - 오늘 할 일 : 우리, 오늘 뭐할까? by React"
     />
     <meta
       name="og:description"
-      content="안녕하세요. 멋쟁이사자처럼 10기 김한울입니다. 커스텀 템플릿 by React 과제 수행 페이지입니다."
+      content="안녕하세요. 멋쟁이사자처럼 10기 김한울입니다. 오늘 할 일 체크리스트 by React 과제 수행 페이지입니다."
     />
     <meta property="og:image" content="/image.png" />
     <meta property="og:locale" content="ko_KR" />
-    <title>[멋쟁이사자처럼 10기] 과제 - 커스텀 템플릿 by React</title>
+    <title>
+      [멋쟁이사자처럼 10기] 과제 - 오늘 할 일 : 우리, 오늘 뭐할까? by React
+    </title>
     <link rel="stylesheet" href="./src/style/index.css" />
     <script type="module" src="./src/index.jsx"></script>
   </head>
